--- a/intRo3 summarise.Rmd
+++ b/intRo3 summarise.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "3A: Subsetting data"
+title: "3: Summarising data"
 subtitle: "Introduction to R"
 author: Andrea Mazzella [(GitHub)](https://github.com/andreamazzella)
 ---
@@ -8,303 +8,399 @@ author: Andrea Mazzella [(GitHub)](https://github.com/andreamazzella)
 
 # What you will learn
 
-* Data subsets with `dplyr`
- - Filtering rows
- - Selecting columns
- 
-* Conditions in R
- 
-* Pipes
- - `|>`
+* Data summarisation
+ - Categorical variables
+ - Continuous variables
+ - Grouped summaries with `dplyr`
+
+* Data visualisation
+ - Histograms
+ - Table 1 with `gtsummary`
 
 -------------------------------------------------------------------------------
 
 
 ```{r}
-# Load packages
+library(janitor)
 library(dplyr)
 library(ggplot2)
+library(gtsummary)
+library(summarytools)
 ```
+
+NB: there seems to be an issue with `summarytools` on Mac computers. If this happens to you, try this solution: (https://community.rstudio.com/t/problem-in-installing-summary-tools-package-in-mac/38387). If you still can't work it out, install and load package `epiDisplay` instead, it has similar tabulation functions.
 
 *Want to know more?*
 Conflict between packages: if two packages contain two functions with the same name, R will use the function from the package that you loaded last. If you want to force R to use the function from a specific package, you can preface the function with `packagename::`. For example, `dplyr::filter(...)` will tell R to specifically use the `filter()` function from `dplyr` (and not the one from `stats`).
 
+-------------------------------------------------------------------------------
+
+For this topic, we'll use `trial`, a sample dataset from package `gtsummary`. This contains the baseline characteristics of 200 patients who received two different cancer drugs (`trt`) and treatment outcomes: `response` and `death`.
+Check its documentation to learn more.
+
+```{r}
+# trial$trt <- factor(trial$trt)
+# trial$response <- factor(trial$response, labels = c("no", "yes"))
+# trial$death <- factor(trial$death, labels = c("no", "yes"))
+
+trial
+help(trial)
+```
+
 
 -------------------------------------------------------------------------------
 
-# Data subsets with `dplyr`
+# Data summarisation
 
-`dplyr` is a package that makes manipulating data easier.
-
-In this session we'll focus on two main tasks for which this package is helpful: reducing rows (`filter()`) and reducing columns (`select()`). We'll continue to use dataset `msleep` from last session.
-
-## Filter rows
-
-Sometimes you don't need to use all the observations (rows) in your dataset, but only a group of those: for example, you might want to plot sleep duration only among herbivores.
-
-The function `filter()` lets you do just that: it filters your dataset according to a condition.
-Its first argument is the dataset name, just like function `ggplot()`.
-Its second argument is a condition.
-
-```{r}
-# Only keep herbivores
-filter(msleep, vore == "omni")
-# note that it's a double = sign!
-```
-
-Note that now there are only 32 rows (down from 83) because all non-herbivores were excluded.
-
-This is a temporary change. `msleep` stayed the same:
-```{r}
-msleep
-```
-
-If you want to keep a copy of a filtered dataset, you need to assign it a name.
-```{r}
-msleep_herbi <- filter(msleep, vore == "herbi")
-```
-
-
-You can use filtered data in a plot: you simply replace the dataset name with the new filtered dataset as the first `ggplot()` argument.
-
-```{r}
-# Plotting all mammals
-ggplot(msleep,
-       aes(sleep_rem, awake, colour = vore)) + geom_point()
-
-# Plotting only herbivores
-ggplot(filter(msleep, vore == "herbi"),
-       aes(sleep_rem, awake, colour = vore)) + geom_point() +
-  scale_colour_manual(values = "#7CAE00") + coord_cartesian(xlim = c(0, 6.5), ylim = c(4, 22)) # this line will make the two graphs more comparable
-```
-
-Common conditions in R:
-`==` (NB: *two* equal signs) - can be used for numbers or text.
-`!=`: different than - can be used for numbers or text.
-`>`, `<`, `>=`, `<=` like in maths.
-`is.na()` - is this a missing value?
-`!is.na()` - is this a non-missing value?
-`%in% c(3, 7)` - is this value present in this list?
-
-For example, we can use `!is.na()` to only keep observation with non-missing sleep cycle data:
-```{r}
-filter(msleep, !is.na(sleep_cycle))
-```
-
-
-You can also filter on more than one condition; for example, you might want to only filter herbivores that sleep more than 15 hours a day.
-```{r}
-filter(msleep, vore == "herbi" & sleep_total > 15)
-```
-
-Linking two conditions:
-`&`: and. The overall condition will be TRUE only if both conditions are TRUE.
-`|`: or. The overall condition will be TRUE if either condition is TRUE.
+`summary()` is a useful function that lets you get a quick summary of your entire dataset (or just a single variable).
 
 *Exercise*
-Filter domesticated mammals that weight more than 50 kg. Which are they?
+Run the following chunk.
+- What is R doing to each variable?
+- What is the median `age`?
+- How many missing values does the `response` variable have?
+```{r}
+summary(trial)
+```
 
-```{r filter}
-filter(msleep, conservation == "domesticated" & bodywt > 50)
+*Want to know more?*
+This only works well if the variables are coded in the correct data classes, so it will not work well with datasets that have not been cleaned first. That's what those earlier `factor()` functions were doing. See `intRo5 clean.Rmd` for how to do this.
+
+
+
+## Frequency tables
+
+To tabulate categorical data, we have many options, among which:
+
+* `table()` from base R,
+* `count()` from `dplyr`,
+* `tabyl()` from `janitor`,
+* `freq()` from package `summarytools`.
+
+*Exercise*
+Run these lines of code *one at a time* and compare their outputs.
+
+- What's the difference?
+- Which function do you prefer?
+- What does the `useNA` argument do?
+```{r}
+# Basic frequency table
+table(trial$response)
+
+# With missing values
+count(trial, response)
+
+# With percentages
+tabyl(trial, response)
 ```
 
 *Exercise*
-Make a bar chart of diet type, but only for mammals whose brain weighs less than 50 grams.
+1. Write a line of code that will calculate the percentage of patients with each cancer `stage`.
+2. Show the same with an appropriate graph.
 
-```{r}
-ggplot(msleep, aes(vore)) + geom_bar()
+```{r ex freq}
+# 1. Frequency table
+tabyl(trial, stage)
 
-ggplot(filter(msleep, brainwt < 50/1000), aes(vore)) + geom_bar()
+# 2. Bar plot
+ggplot(trial, aes(y = stage)) + geom_bar()
 ```
 
 
--------------------------------------------------------------------------------
+## Cross-tabulation
 
-## Select columns
+We're often interested in showing the distribution of *two* categorical variables against each other, i.e., cross-tabulation (two-way tables). This way we can check counts and percentages of each possible combination of factors.
 
-Function `select()` keeps only certain variables (columns), and removes the rest. The first argument is (again) the dataset name. All the other arguments are the names of the variables we want to keep.
+To make two-way tables you can use
+* `table()` from base R, but it doesn't calculate percentages.
+* `count()` from `dplyr`, but it returns an output in long format and without percentages.
+* `tabyl()` from `janitor`
+* `ctable()` from `summarytools`; it's a very customisable function. 
 
-Imagine we wanted a dataset containing only information about mammal `name` and `order`:
+```{r crosstab}
+table(trial$trt, trial$response, useNA = "ifany")
 
-```{r}
-select(msleep, name, order)
-```
+trial |> count(trt, response)
 
-We can add as many variables as we need.
+trial |> tabyl(trt, response) |>
+  adorn_percentages() |>
+  adorn_pct_formatting() |> 
+  adorn_ns(position = "front")
 
-*Exercise*
-Select only variables with brain and body weight, as well as mammal name.
-```{r select}
-select(msleep, name, brainwt, bodywt)
-```
+# With row percentages
+# NB: summarytools 1.0.1 has an issue with R 4.1 - the following two lines do not work
+summarytools::ctable(trial$trt, trial$response, useNA = "no")
 
-
-
-There are a number of functions to help us select more efficiently; for example, `starts_with()`:
-```{r}
-msleep |> select(name, starts_with("sleep"))
-```
-
-
--------------------------------------------------------------------------------
-
-
-# Pipes
-
-In the chunk above you might have noticed a weird `|>`. What was that?
-
-## `|>` pipe
-
-The "native" R pipe is `|>`. It makes your code quicker to write and most importantly, easier to read.
-
-The `|>` does this:
-1. It takes what's on its left hand-side
-2. It moves it inside the brackets in the function on its right hand-side
-3. It adds a comma.
-
-Examples:
-
-```{r}
-# Code with the pipe
-msleep |> filter(order == "Primates")
-
-# Code without the pipe
-filter(msleep, order == "Primates")
-```
-In the chunk above, the `|>` pipe takes `msleep` and shifts it inside `filter()`, in first position, and then adds a comma.
-It effectively makes `msleep` the first argument of `filter()`.
-
-You might think that it's not particularly helpful in this case. However, it can simplify more complex code - for example, think about doing plots with an intermediate subsetting step. You have three options which produce the same result.
-
-*Don't* run the chunk: focus on the syntax.
-```{r}
-# Option 1: nested functions
-ggplot(filter(msleep, vore == "herbi"), aes(sleep_rem, awake, colour = vore)) +
-  geom_point()
-
-# Option 2: intermediate assignment
-msleep_herbi <- filter(msleep, vore == "herbi")
-ggplot(msleep_herbi, aes(sleep_rem, awake, colour = vore)) +
-  geom_point()
-
-# Option 3: piping
-msleep |> 
-  filter(vore == "herbi") |> 
-  ggplot(aes(sleep_rem, awake, colour = vore)) +
-  geom_point()
-```
-An explanation of the code above.
-1. Make a plot of a filtered version of `msleep`. This makes code more difficult to read - you don't immediately understand which dataset is being plotted.
-2. Create a new object called `msleep_herbi` and make it a filtered version of `msleep`. Then make a plot of `msleep_herbi`. This is clearer, but you risk ending up with a very busy Environment if you create a lot of new objects.
-3. You take `msleep` *and then* you `filter()` it, *and then* you use that in a `ggplot()`.
-
-*Exercise*
-Rewrite this command using a pipe.
-```{r}
-# Code without a pipe
-select(msleep, name)
-
-# Code with a pipe
-
+# With column percentages (proportions)
+ctable(trial$trt, trial$response, prop = "c", useNA = "no")
 ```
 
 *Exercise*
-Rewrite this command without the pipe.
-```{r}
-msleep |> filter(awake > 21)
+Write some code to calculate the percentage of people with `grade` I cancer who were alive at the end of the study.
+(If you can't remember the names of your variables, you can run `names(trial)`.
+```{r ex contingency}
+# With `tabyl`
+trial |> tabyl(grade, death) |>
+  adorn_totals(c("row", "col")) |> 
+  adorn_percentages() |>
+  adorn_pct_formatting() |>
+  adorn_ns(position = "front")
+
+# With `ctable`
+ctable(trial$grade, trial$death, useNA = "no")
 ```
 
 
-You can combine `select()` and `filter()` by piping. For example, you might want to only focus on weight information for animals with missing `conservation` data. 
+## What is `|>`?
+
+`|>` is called a *pipe*; it's a programming tool that helps improve code readability. It was introduced in R version 4.1.
+
+These two lines are equivalent:
 ```{r}
-msleep |>
-  filter(is.na(conservation)) |> 
-  select(name, ends_with("wt"))
+trial |> count(response)
+
+count(trial, response)
+```
+
+You can see that the pipe is taking what's before it and it's shifting it as the first argument of the function that follows.
+
+You can also have more than one pipe. These are equivalent:
+```{r}
+# Option 1: two pipes
+trial |> tabyl(grade) |> adorn_totals()
+
+# Option 2: one pipe
+tabyl(trial, grade) |> adorn_totals()
+
+# Option 3: nested functions
+adorn_totals(tabyl(trial, grade))
+
+# Option 4: assignment
+table1 <- tabyl(trial, grade)
+adorn_totals(table1)
+```
+
+We'll cover pipes in more detail in the next topic.
+
+
+## Summarising continuous variables
+
+As we've seen previously, to summarise continuous variables, you can use functions `mean()`, `median()`, `sd()` – or you can use `summary()` again:
+```{r}
+mean(trial$ttdeath)
+median(trial$ttdeath)
+sd(trial$ttdeath)
+```
+
+*Exercise*
+1. Try and calculate the average age with `mean()`.
+2. Why do you get this result?
+3. Use `help(mean)` to see if you can figure out how to fix this.
+```{r}
+
+```
+
+
+You can also get many summary measures in one go by passing a variable to `summary()`.
+```{r}
+summary(trial$marker)
+```
+
+
+
+## Histograms
+
+Histograms are helpful when we want to check the distribution of a continuous variable - with more detail than a Box plot.
+
+A histogram is similar to a bar chart, but it first needs to cut the continuous variable into "bins". By default, `geom_histogram()` uses 30 bins, but you can customise it by adding a `bins =` value. Or you can say how wide each bin should be, with `binwidth =`.
+
+ 
+```{r histogram1}
+ggplot(trial, aes(marker)) +
+  geom_histogram(bins = 10)
+```
+
+The `marker` variable is not normally distributed, so it would make sense to summarise it with median and IQR.
+
+Compare it with the below:
+
+```{r}
+ggplot(data.frame(marker2 = rnorm(1000, 2)), aes(marker2)) +
+  geom_histogram(bins = 10)
+```
+
+This looks normally distributed, so mean and standard deviation would be good summary measures.
+
+-------------------------------------------------------------------------------
+
+
+# Grouped summaries with `dplyr`
+
+What if we wanted to calculate the mean age in specific groups of patients, such as by treatment group?
+
+We can use two powerful functions from package `dplyr`: `group_by()` and `summarise()`. Combined, these two functions collapse the dataset according to a categorical variable, and summarise it with on or more other functions.
+
+```{r}
+trial |>
+  group_by(trt) |> 
+  summarise(mean(age, na.rm = TRUE))
+```
+
+
+(NB: `summarise()` is different from the function we used above, `summary()`!)
+
+You can summarise with any of these functions:
+- `mean()`, `median()`,
+- `sd()`, `IQR()`,
+- `min()`, `max()`,
+- `n()`, `n_distinct()`
+
+We can use as many of these as you want in a single `summarise()` call, and you can also summarise more than one variable at the same time.
+`n()` will count the observations in that group.
+
+```{r}
+trial |>
+  group_by(trt) |> 
+  summarise(count = n(),
+            avg_age = mean(age, na.rm = TRUE),
+            avg_follow_up = mean(ttdeath),
+            sd_follow_up = sd(ttdeath))
+```
+
+Remember that we can visualise the distribution of a continuous variable across a categorical variable with Box plots.
+
+*Recall exercise*
+
+Make a Box plot to show the distribution of age across the two treatment groups in the `trial` dataset.
+
+```{r}
+trial |> ggplot(aes(age, trt)) +
+  geom_boxplot()
+```
+
+
+And we can group by more than one variable.
+```{r}
+trial |>
+  group_by(trt, death) |> 
+  summarise(avg_follow_up = mean(ttdeath, na.rm = T) |> round(1))
+```
+
+*Exercise*
+Calculate the median age and the age interquartile range in the two response groups.
+```{r}
+trial |>
+  group_by(response) |>
+  summarise(mean(age, na.rm = TRUE),
+            IQR(age, na.rm = TRUE))
+
+```
+
+
+
+-------------------------------------------------------------------------------
+
+
+# Summary tables
+
+Summary data is often presented in a "Table 1": this contains a summary of the baseline characteristics, with frequencies and percentages for categorical variables, and means or medians with a measure of variability for continuous variables. Usually these are painful to prepare because you need to do a lot of calculations and then painstakingly copy them into a table. Also, if the data changes (new data, or new variables) you need to redo it from scratch.
+
+Package `gtsummary()` allows us to programmatically create publication-ready summary tables that can be automatically exported into .html or .doc formats.
+
+
+## Basic `gtsummary` table
+
+This package is somewhat similar to `ggplot2`. The main function is `tbl_summary()`, which we can then build upon.
+
+By default it summarises *all* dataset variables, but you can `select()` only some.
+
+```{r}
+trial |>
+  select(trt, age, grade, response) |> 
+  tbl_summary()
+```
+
+Note that the variables have been renamed, e.g., "Tumor Response" rather than `response`. This is because this dataset is in a special "labelled" format. This won't happen automatically with your data, unless you pre-process it with package `labelled` - by default, the variable names will be displayed in the table.
+
+
+
+## Stratified `gtsummary` table
+
+Using argument `by =` it's possible to stratify the table according to a categorical variable.
+
+For example, let's stratify by treatment arm:
+
+```{r}
+trial |>
+  select(age, grade, trt, response) |> 
+  tbl_summary(by = trt)
+```
+
+We might still want to also have a column with overall values. We do this by piping the table into `add_overall()`:
+
+```{r}
+final_table <- trial |>
+  select(age, grade, marker, trt, response, death, ttdeath) |> 
+  tbl_summary(by = trt) |> 
+  add_overall()
+
+final_table
+```
+
+*Exercise*
+```{r}
+
+```
+
+## Save a `gtsummary` table
+
+We can use `gtsave()` to save a table to a file. Valid extensions include PDF, HTML, PNG.
+
+```{r}
+final_table |>
+  as_gt() |> 
+  gt::gtsave("table1.html")
 ```
 
 -------------------------------------------------------------------------------
 
-*Recap exercise*
-1. Create a new dataset called `sleepy` containing only data on genus and order - just for insectivores who sleep at least 9 hours per day.
-2. How many mammals satisfy these filters?
-3. Which animal orders do they belong to?
-```{r recap}
-msleep |>
-  filter(vore == "insecti" & sleep_total >= 13) |>
-  select(name, genus, order)
-```
+## Learn more
 
--------------------------------------------------------------------------------
+I recommend these resources:
 
-## When you can't use the native pipe
-
-All packages in the `tidyverse` (`ggplot2`, `dplyr`, `tidyr`) and many others use this philosophy - the first argument of a function that uses data as input should be the dataset name. When this happens, you can use the pipe syntax.
-
-Unfortunately, many R functions don't follow this philosophy.
-
-For example, the function for linear regression, `lm()`, requires the formula as a first argument, and data as the second. You can't use the `|>` pipe for this.
-
-Another example is the `table()` function. If you want to have a 2x2 table, its arguments need to be the columns as identified by the `$` operator, for example, `table(msleep$conservation, msleep$vore)`. This means that you can't use the native pipe: `msleep |> table(conservation, vore)` would transform into `table(msleep, conservation, vore)` which is not what the `table()` function is expecting.
+* R for Data Science
+ - [chapter 7: Exploratory data analysis](https://r4ds.had.co.nz/exploratory-data-analysis.html)
+ - [chapter 5.6: Grouped summaries with `summarise`](https://r4ds.had.co.nz/transform.html#grouped-summaries-with-summarise)
+* `gtsummary` documentation, [Tutorial: `tbl_summary`](https://www.danieldsjoberg.com/gtsummary/articles/tbl_summary.html)
 
 
 -------------------------------------------------------------------------------
 
-## Other pipes
+## Solutions
 
 
-You will sometimes see other pipes. The two more common ones are:
-- `%>%` - in most circumstances it works the same as `|>`. It's very popular because it was created before `|>`.
-- `%$%` - this is the equivalent of `|>` for functions that require columns to be identified with `$`.
-
-I don't think it's important to know more about these pipes at this stage.
-
-*But if you're a keen bean and want to know more...*
-
-### `%>%` pipe
-
-`%>%` is originally from package `magrittr` but it's also loaded whenever you use any `tidyverse` package.
-
-It is slightly more flexible than `|>` because it can also push what's on the left to arguments of the function on the right *that are not in the first position* - you indicate the exact position with a place-holding dot.
-
-```{r}
-# Base R
-lm(sleep_rem ~ brainwt, data = msleep)
-
-# Pipe
-msleep %>% lm(sleep_rem ~ brainwt, data = .)
-```
-
-
-### `%$%` pipe
-
-You might remember the `$` operator, which extracts a variable from a dataset: `data$variable1` subsets the variable called `variable1` from the dataset `data`.
-```{r}
-msleep$vore
-```
-
-We use this syntax when a function requires a variable (and not the whole dataset); for example, if we want to get the frequencies, we can use the syntax below.
-```{r}
-table(msleep$vore)
-```
-
-The `%$%` pipe, from package `magrittr`, takes what's on its left (usually, the dataset name) and moves it inside the function, before each argument, and adds a `$` in between. It lets you avoid typing the dataset name and `$` twice, and it makes the true arguments of the function stand out.
-It's particularly useful when a function uses multiple variables, because otherwise you would need to specify which dataset is each variable from – this would quickly become verbose.
-The two commands below generate the same output.
-```{r}
-# Without a pipe (= base R)
-table(msleep$conservation, msleep$vore)
-
-# With the %$% pipe
-library(magrittr)
-msleep %$% table(conservation, vore)
-```
 
 -------------------------------------------------------------------------------
 
 
 
-# Solutions
 
 
 
--------------------------------------------------------------------------------
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
